contact info added

--- a/index.html
+++ b/index.html
@@ -9,21 +9,51 @@
 
 <body>
     <header>
-        <nav>
             <h1>
                 Alex Chung
             </h1>
-        </nav>
-
+    <nav>    
         <ul>
             <li>
                 <a href="#about-me">About Me</a>
                 <a href="#work">Work</a>
-                <a href="#contact">Contact Me</a>
+                <a href="#contact-me">Contact Me</a>
                 <!-- Link to Resume (similar to run buddy privacy policy) -->
                 <a href="#">Resume</a>
             </li>
         </ul>
+    </nav>       
     </header>
+
+    <!-- Background picture -->
+    <section class="hero-banner">
+        <h2>Hi, I'm Alex. My goal is to be a Front End Developer.</h2>
+    </section>
+
+    <section id= "about-me">
+        <div>
+            <h2>About Me</h2>
+        </div>
+
+        <div>
+            <p>
+                I am currently working in the finance industry and I am enrolled in a coding program. Outside of working
+                I like to golf, play hockey, and write code.
+            </p>
+        </div>
+    </section>
+
+
+    <!-- Contact -->
+    <section class="contact" id="contact-me">
+        <h2>Contact Me</h2>
+        <div>
+            <address>
+                <a href="tel:+416-219-8025">416-219-8025</a>
+                <a href="mailto:alex.chung92@gmail.com">alex.chung92@gmail.com</a>
+                <a href="https://github.com/AChung92" target="_blank">Github</a>
+            </address>
+        </div>
+    </section>
 </body>
 </html>
