background picture hero section

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
 
     <!-- Background picture -->
     <section class="hero-banner">
-        <h2>Hi, I'm Alex. My goal is to be a Front End Developer.</h2>
+        <div class="hero-cta">
+            <h2>Hi, I'm Alex. My goal is to be a Front End Developer.</h2>
+        </div>
     </section>
 
+    <!-- About Me Section -->
     <section id= "about-me">
         <div>
             <h2>About Me</h2>
@@ -43,6 +46,33 @@
         </div>
     </section>
 
+    <!-- Portfolio Grid -->
+    <section class="page-section" id="work">
+        <h2>Work</h2>
+        <div class="grid-container">
+            <a href="#" class="grid-item run-buddy">
+                <div>
+                    <h3>Run Buddy</h3>
+                    <span>HTML/CSS</span>
+                </div>
+            </a>
+
+            <a href="#" class="grid-item horiseon">
+                <div>
+                    <h3>Horiseon Social Solution Services</h3>
+                    <span>HTML/CSS</span>
+                </div>
+            </a>
+
+            <a href="#" class="grid-item test-project">
+                <div>
+                    <h3>Test Project</h3>
+                    <span>Javascript</span>
+                </div>
+            </a>
+            </a>
+        </div>
+    </section>
 
     <!-- Contact -->
     <section class="contact" id="contact-me">
