--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
     </section>
 
     <!-- About Me Section -->
-    <section id= "about-me">
-        <div>
-            <h2>About Me</h2>
+    <section class="about" id= "about-me">
+        <div class="flex-row">
+            <h2 class="section-title primary-border">About Me</h2>
         </div>
 
-        <div>
+        <div class="flex-row">
             <p>
-                I am currently working in the finance industry and I am enrolled in a coding program. Outside of working
-                I like to golf, play hockey, and write code.
+                I am currently working in the finance industry and I am enrolled in the University of Toronto Full Stack Coding Bootcamp. Outside of work and coding,
+                I like to read, golf, and play hockey. Currently, I am still building up my skills, but I would love to meet up and get to know you, so please do not 
+                hesitate to reach out.
             </p>
         </div>
     </section>
