updated grid items

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="flex-row">
             <p>
-                I am currently working in the finance industry and I am enrolled in the University of Toronto Full Stack Coding Bootcamp. Outside of work and coding,
+                I am currently working in the financial industry and I am enrolled in the University of Toronto Full Stack Coding Bootcamp. Outside of work and coding,
                 I like to read, golf, and play hockey. Currently, I am still building up my skills, but I would love to meet up and get to know you, so please do not 
                 hesitate to reach out.
             </p>
@@ -49,35 +49,56 @@
 
     <!-- Portfolio Grid -->
     <section class="page-section" id="work">
-        <h2>Work</h2>
-        <div class="grid-container">
-            <a href="#" class="grid-item run-buddy">
-                <div>
-                    <h3>Run Buddy</h3>
-                    <span>HTML/CSS</span>
-                </div>
-            </a>
+        <h2 class="section-title secondary-border">Work</h2>
 
-            <a href="#" class="grid-item horiseon">
-                <div>
-                    <h3>Horiseon Social Solution Services</h3>
-                    <span>HTML/CSS</span>
+        <div class="grid-wrapper">
+            <div class="grid-container">
+                <div class="grid-item run-buddy">
+                    <a href="#">
+                        <div class="contain">
+                        <h3>Run Buddy</h3>
+                        <span>HTML/CSS</span>
+                        </div>
+                    </a>
                 </div>
-            </a>
+            
+                <div class="grid-item horiseon">
+                    <a href="https://achung92.github.io/horiseon-advertising/" target="_blank">
+                        <h3>Horiseon Social Solution Services</h3>
+                        <span>HTML/CSS</span>
+                    </a>
+                </div>
 
-            <a href="#" class="grid-item test-project">
-                <div>
-                    <h3>Test Project</h3>
-                    <span>Javascript</span>
+                <div class="grid-item project-1">
+                    <a href="https://achung92.github.io/horiseon-advertising/">
+                        <img src="../images/horiseon.png" alt="laptop") />
+                    </a>
+                        <h3>Test Project 1</h3>
+                        <span>Javascript</span>
                 </div>
-            </a>
-            </a>
+
+                <div class="grid-item project-2">
+                    <a href="#">
+                        <h3>Test Project 2</h3>
+                        <span>HTML/CSS</span>
+                    </a>
+                </div>
+
+                <div class="grid-item project-3">
+                    <a href="#">
+                        <h3>Test Project 3</h3>
+                        <span>HTML</span>
+                    </a>
+                </div>
+
+
+            </div>
         </div>
     </section>
 
     <!-- Contact -->
     <section class="contact" id="contact-me">
-        <h2>Contact Me</h2>
+        <h2>Contact Info</h2>
         <div>
             <address>
                 <a href="tel:+416-219-8025">416-219-8025</a>
