horiseon grid image

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                 </div>
 
                 <div class="grid-item project-1">
-                    <a href="https://achung92.github.io/horiseon-advertising/">
-                        <img src="../images/horiseon.png" alt="laptop") />
-                    </a>
+                        <a href="https://achung92.github.io/horiseon-advertising/">
+                        <img src="../images/project1.jpg" alt="laptop" />
                         <h3>Test Project 1</h3>
                         <span>Javascript</span>
+                        </a>
                 </div>
 
                 <div class="grid-item project-2">
