contact info style added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
                 <div class="grid-item project-1">
                         <a href="https://achung92.github.io/horiseon-advertising/">
-                        <img src="../images/project1.jpg" alt="laptop" />
+                        <img src=".assets/images/project1.jpg" alt="laptop" />
                         <h3>Test Project 1</h3>
                         <span>Javascript</span>
                         </a>
@@ -98,14 +98,17 @@
 
     <!-- Contact -->
     <section class="contact" id="contact-me">
-        <h2>Contact Info</h2>
-        <div>
-            <address>
-                <a href="tel:+416-219-8025">416-219-8025</a>
-                <a href="mailto:alex.chung92@gmail.com">alex.chung92@gmail.com</a>
-                <a href="https://github.com/AChung92" target="_blank">Github</a>
-            </address>
-        </div>
+        <h2 class="section-title primary-border">Contact Info</h2>
+            <nav>
+                <ul>
+                    <li>
+                    <a href="tel:+416-219-8025">416-219-8025</a>
+                    <a href="mailto:alex.chung92@gmail.com">alex.chung92@gmail.com</a>
+                    <a href="https://github.com/AChung92" target="_blank">Github</a>
+                    <a href="https://www.linkedin.com/in/alex-chung-5b22ba200/" target="_blank">Linkedin</a>
+                    </li>
+                </ul>
+            </nav>
     </section>
 </body>
 </html>
