--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#work">Work</a>
                 <a href="#contact-me">Contact Me</a>
                 <!-- Link to Resume (similar to run buddy privacy policy) -->
-                <a href="#">Resume</a>
+                <a href="./Resume.md" target="_blank">Resume</a>
             </li>
         </ul>
     </nav>       
@@ -55,11 +55,12 @@
             <div class="grid-container">
                 <div class="grid-item run-buddy">
                     <a href="#">
-                        <div class="contain">
+                        <div class="work-img">
                         <h3>Run Buddy</h3>
                         <span>HTML/CSS</span>
                         </div>
                     </a>
+
                 </div>
             
                 <div class="grid-item horiseon">
@@ -71,10 +72,10 @@
 
                 <div class="grid-item project-1">
                         <a href="https://achung92.github.io/horiseon-advertising/">
-                        <img src=".assets/images/project1.jpg" alt="laptop" />
                         <h3>Test Project 1</h3>
                         <span>Javascript</span>
                         </a>
+
                 </div>
 
                 <div class="grid-item project-2">
