--- a/index.html
+++ b/index.html
@@ -53,44 +53,41 @@
 
         <div class="grid-wrapper">
             <div class="grid-container">
-                <div class="grid-item run-buddy">
-                    <a href="#">
-                        <div class="work-img">
+                <a href="https://achung92.github.io/run-buddy/" target="_blank" class="grid-item run-buddy">
+                    <div>
                         <h3>Run Buddy</h3>
                         <span>HTML/CSS</span>
-                        </div>
-                    </a>
+                    </div>
+                </a>
 
-                </div>
-            
-                <div class="grid-item horiseon">
-                    <a href="https://achung92.github.io/horiseon-advertising/" target="_blank">
+                <a href="https://achung92.github.io/horiseon-advertising/" target="_blank" class="grid-item horiseon">
+                    <div>
                         <h3>Horiseon Social Solution Services</h3>
                         <span>HTML/CSS</span>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-                <div class="grid-item project-1">
-                        <a href="https://achung92.github.io/horiseon-advertising/">
+                <a href="#" class="grid-item project-1">
+                    <div>
                         <h3>Test Project 1</h3>
                         <span>Javascript</span>
-                        </a>
+                    </div>
+                </a>
 
-                </div>
-
-                <div class="grid-item project-2">
-                    <a href="#">
+                <a href="#" class="grid-item project-2">
+                    <div>
                         <h3>Test Project 2</h3>
                         <span>HTML/CSS</span>
-                    </a>
-                </div>
+                    </div>
+                </a>
 
-                <div class="grid-item project-3">
-                    <a href="#">
+                <a href="#" class="grid-item project-3">
+                    <div>
                         <h3>Test Project 3</h3>
                         <span>HTML</span>
-                    </a>
-                </div>
+                    </div>
+                </a>
+
 
 
             </div>
