--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
         <div class="grid-wrapper">
             <div class="grid-container">
                 <a href="https://achung92.github.io/run-buddy/" target="_blank" class="grid-item run-buddy">
-                    <div>
+                    <div class="runbuddy-img">
                         <h3>Run Buddy</h3>
                         <span>HTML/CSS</span>
                     </div>
                 </a>
 
                 <a href="https://achung92.github.io/horiseon-advertising/" target="_blank" class="grid-item horiseon">
-                    <div>
+                    <div class="horiseon-img">
                         <h3>Horiseon Social Solution Services</h3>
                         <span>HTML/CSS</span>
                     </div>
                 </a>
 
                 <a href="#" class="grid-item project-1">
-                    <div>
+                    <div class="work-img">
                         <h3>Test Project 1</h3>
                         <span>Javascript</span>
                     </div>
                 </a>
 
                 <a href="#" class="grid-item project-2">
-                    <div>
+                    <div class="work-img">
                         <h3>Test Project 2</h3>
                         <span>HTML/CSS</span>
                     </div>
                 </a>
 
                 <a href="#" class="grid-item project-3">
-                    <div>
+                    <div class="work-img">
                         <h3>Test Project 3</h3>
                         <span>HTML</span>
                     </div>
