--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#work">Work</a>
                 <a href="#contact-me">Contact Me</a>
                 <!-- Link to Resume (similar to run buddy privacy policy) -->
-                <a href="./Resume.md" target="_blank">Resume</a>
+                <a href="./resume.html" target="_blank">Resume</a>
             </li>
         </ul>
     </nav>       
