added screen genius

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     </div>
                 </a>
 
-                <a href="#" class="grid-item project-1">
+                <a href="https://screen-genius.github.io/" class="grid-item project-1">
                     <div class="work-img">
-                        <h3>Test Project 1</h3>
-                        <span>Javascript</span>
+                        <h3>Screen Genius</h3>
+                        <span>HTML/CSS/Bulma/JS</span>
                     </div>
                 </a>
 
